// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders app 1`] = `
<Relay(AppContainer)
  data={Object {}}
/>
`;

exports[`renders error 1`] = `
<div>
  error
</div>
`;

exports[`renders loading 1`] = `
<div>
  Loading
</div>
`;

exports[`renders permalink view 1`] = `
<withContext(createMutationContainer(Relay(withContext(LocalStateContainer))))
  data={Object {}}
/>
`;
